Fix alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   max-width: 1200px;
-  align: center;
+  margin: auto;
 
   background-color: #DDD;
 }
